--- a/config/cavlite.conf
+++ b/config/cavlite.conf
@@ -2,4 +2,6 @@ WEBHOOK_URL=""
 # Root Directory to scan
 SCAN_PATH="/" 
 # Directory to move infected files
-QUARANTINE_DIR="/var/quarantine" 
+QUARANTINE_DIR="/var/quarantine"
+# Paths to exclude from scanning
+EXCLUDE_PATHS=("/proc" "/sys" "/run" "/dev" "/snap") 
