--- a/config/cavlite.conf
+++ b/config/cavlite.conf
@@ -4,4 +4,4 @@ SCAN_PATH="/"
 # Directory to move infected files
 QUARANTINE_DIR="/var/quarantine"
 # Paths to exclude from scanning
-EXCLUDE_PATHS=("^/proc" "^/sys" "^/snap" "^.*/node_modules/.*$")
+EXCLUDE_PATHS=("^/proc" "^/sys" "^/snap" "^.*/node_modules/.*$" "^/swapfile" "^/run" "^/dev" "^/mnt" "^/media" "^/var/lib/docker" "^/var/lib/nomad" "^/var/lib/postgresql" "^/var/lib/mysql" "^/var/lib/mongodb" "^/var/lib/mariadb" "^/var/lib/containerd" "^/var/lib/kubelet")
