--- a/config/cavlite.conf
+++ b/config/cavlite.conf
@@ -7,3 +7,10 @@ QUARANTINE_DIR="/var/quarantine"
 EXCLUDE_PATHS=(
     "^/swapfile"
 )
+
+# Path to log file
+LOG_FILE="/var/log/cavlite"
+
+# Enable/Disable Scanners
+LYNIS=True
+clamdscan=True
