--- a/config/cavlite.conf
+++ b/config/cavlite.conf
@@ -8,7 +8,7 @@ EXCLUDE_PATHS=(
     "^/swapfile"
 )
 
-# Path to log file
+# Path to log directory (logs will be stored here as monday.log, etc.)
 LOG_FILE="/var/log/cavlite"
 
 # Enable/Disable Scanners
